--- a/WpfApp/MainWindow.xaml
+++ b/WpfApp/MainWindow.xaml
@@ -20,6 +20,8 @@
         <TextBox x:Name="IndexNum" HorizontalAlignment="Center" Height="24" Margin="0,104,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="62"/>
         <Image Name="ImageSec" Margin="582,214,54,46" />
         <TextBlock HorizontalAlignment="Left" Height="35" Margin="200,104,0,0" TextWrapping="Wrap" Text="Enter Index of user" VerticalAlignment="Top" Width="124" RenderTransformOrigin="0.645,-0.155"/>
+        <TextBox x:Name="SearchBox" HorizontalAlignment="Left" Height="27" Margin="570,101,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="134"/>
+        <Button x:Name="SearchButthon" Content="Search" HorizontalAlignment="Left" Height="27" Margin="712,134,0,0" VerticalAlignment="Top" Width="60" Click="SearchButthon_Click"/>
 
     </Grid>
 </Window>
