--- a/WebGUI/Views/Home/Index.cshtml
+++ b/WebGUI/Views/Home/Index.cshtml
@@ -12,6 +12,10 @@
         {
             <tr>
                 <td>@user.accNo</td>
+                <td>@user.firstName</td>
+                <td>@user.lastName</td>
+                <td>@user.balance</td>
+                <td>@user.pin</td>
             </tr>
         }
     </table>
