--- a/WebGUI/Views/Shared/_Layout.cshtml
+++ b/WebGUI/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <div id="navigation">
         <ul>
             <li> <a href="/Home">Home</a></></li>
-            <li> <a href="/Students">Students</a></></li>
+            <li> <a href="/banking">Banking Users</a></></li>
         </ul>
     </div>
     <div id="main">
