--- a/WebGUI/wwwroot/css/site.css
+++ b/WebGUI/wwwroot/css/site.css
@@ -36,7 +36,7 @@ div#navigation li {
 
 div#main {
     background-color: palegreen;
-    height: 400px;
+    height: 660px;
 }
 
 div#studentForm {
@@ -59,10 +59,11 @@ input {
 }
 
 button {
-    margin: 20px 20px 20px 20px;
+    margin: 5px 5px 5px 5px;
 }
 
 div#footer {
+   
     background-color: lightcoral;
     text-align: center;
     height: 100px;
@@ -70,4 +71,9 @@ div#footer {
 
 table, th, td {
     border: 1px solid black;
+}
+
+imagesec{
+    height:20px;
+
 }
